[options]
install_requires =
    pygit2

[options.extras_require]
dev =
    black
    mypy
    tox>=3.4
test =
    pytest-cov
    pytest>=5.2

[metadata]
name = git-remerge
version = 0.1
description = git remerge - rebase but redo merge
author = 'Leonard Crestez',
author_email = 'cdleonard@gmail.com',
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[tox:tox]
envlist = py36
minversion = 3.4

[testenv]
extras = test
commands = pytest \
        --cov --cov-append --cov-report=html \
        {posargs}
passenv = PYTEST_ADDOPTS

# RUN: mypy
[mypy]
check_untyped_defs = true
allow_redefinition = true

[pylama:pycodestyle]
max_line_length = 88
ignore = E402
